--- a/src/fleet/kube-apiserver.service
+++ b/src/fleet/kube-apiserver.service
@@ -3,12 +3,15 @@ Description=Kubernetes API Server
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
 
 [Service]
-ExecStartPre=/usr/bin/wget -N -P /opt/bin http://storage.googleapis.com/k8s/apiserver
-ExecStartPre=/usr/bin/chmod +x /opt/bin/apiserver
-ExecStart=/opt/bin/apiserver \
+ExecStartPre=-/usr/bin/mkdir -p /opt/bin
+ExecStartPre=/usr/bin/wget -N -P /opt/bin https://storage.googleapis.com/kubernetes-release/release/$(curl --insecure -sS https://get.k8s.io | grep release= | cut -f2 -d"=")/bin/linux/amd64/kube-apiserver
+ExecStartPre=/usr/bin/chmod +x /opt/bin/kube-apiserver
+ExecStart=/opt/bin/kube-apiserver \
 --address=0.0.0.0 \
 --port=8080 \
+--portal_net=10.244.0.0/16 \
 --etcd_servers=http://127.0.0.1:4001 \
+--public_address_override=172.17.15.101 \
 --logtostderr=true
 Restart=always
 RestartSec=10
