--- a/src/fleet/kube-controller-manager.service
+++ b/src/fleet/kube-controller-manager.service
@@ -3,9 +3,9 @@ Description=Kubernetes Controller Manager
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
 
 [Service]
-ExecStartPre=/usr/bin/wget -N -P /opt/bin http://storage.googleapis.com/k8s/controller-manager
-ExecStartPre=/usr/bin/chmod +x /opt/bin/controller-manager
-ExecStart=/opt/bin/controller-manager \
+ExecStartPre=/usr/bin/wget -N -P /opt/bin https://storage.googleapis.com/kubernetes-release/release/$(curl --insecure -sS https://get.k8s.io | grep release= | cut -f2 -d"=")/bin/linux/amd64/kube-controller-manager
+ExecStartPre=/usr/bin/chmod +x /opt/bin/kube-controller-manager
+ExecStart=/opt/bin/kube-controller-manager \
 --master=127.0.0.1:8080 \
 --logtostderr=true
 Restart=always
