--- a/src/fleet/kube-kubelet.service
+++ b/src/fleet/kube-kubelet.service
@@ -6,13 +6,13 @@ After=setup-network-environment.service
 
 [Service]
 EnvironmentFile=/etc/network-environment
-ExecStartPre=/usr/bin/wget -N -P /opt/bin http://storage.googleapis.com/k8s/kubelet
+ExecStartPre=/usr/bin/wget -N -P /opt/bin https://storage.googleapis.com/kubernetes-release/release/$(curl --insecure -sS https://get.k8s.io | grep release= | cut -f2 -d"=")/bin/linux/amd64/kubelet
 ExecStartPre=/usr/bin/chmod +x /opt/bin/kubelet
 ExecStart=/opt/bin/kubelet \
 --address=0.0.0.0 \
 --port=10250 \
---hostname_override=${DEFAULT_IPV4} \
---etcd_servers=http://CONTROL-NODE-INTERNAL-IP:4001 \
+--hostname_override=$public_ipv4 \
+--etcd_servers=http://172.17.15.101:4001 \
 --logtostderr=true
 Restart=always
 RestartSec=10
