--- a/src/fleet/kube-scheduler.service
+++ b/src/fleet/kube-scheduler.service
@@ -3,7 +3,7 @@ Description=Kubernetes API Server
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
 
 [Service]
-ExecStartPre=/usr/bin/wget -N -P /opt/bin https://storage.googleapis.com/kubernetes-release/release/$(curl --insecure -sS https://get.k8s.io | grep release= | cut -f2 -d"=")/bin/linux/amd64/kube-scheduler
+ExecStartPre=/bin/bash -c '/usr/bin/wget -N -P /opt/bin https://storage.googleapis.com/kubernetes-release/release/$(curl --insecure -sS https://get.k8s.io | grep release= | cut -f2 -d"=")/bin/linux/amd64/kube-scheduler'
 ExecStartPre=/usr/bin/chmod +x /opt/bin/kube-scheduler
 ExecStart=/opt/bin/kube-scheduler --master=127.0.0.1:8080
 Restart=always
