--- a/src/fleet/kube-kubelet.service
+++ b/src/fleet/kube-kubelet.service
@@ -11,7 +11,7 @@ ExecStartPre=/usr/bin/chmod +x /opt/bin/kubelet
 ExecStart=/opt/bin/kubelet \
 --address=0.0.0.0 \
 --port=10250 \
---hostname_override=$public_ipv4 \
+--hostname_override=${ETH1_IPV4} \
 --etcd_servers=http://172.17.15.101:4001 \
 --logtostderr=true
 Restart=always
