--- a/src/fleet/kube-apiserver.service
+++ b/src/fleet/kube-apiserver.service
@@ -14,6 +14,7 @@ ExecStart=/opt/bin/kube-apiserver \
 --public_address_override=172.17.15.101 \
 --logtostderr=true
 
+TimeoutStartSec=900s
 Restart=always
 RestartSec=10
 
