--- a/src/fleet/kube-kubelet.service
+++ b/src/fleet/kube-kubelet.service
@@ -15,6 +15,7 @@ ExecStart=/opt/bin/kubelet \
 --etcd_servers=http://172.17.15.101:4001 \
 --logtostderr=true
 
+TimeoutStartSec=900s
 Restart=always
 RestartSec=10
 
