--- a/src/fleet/kube-proxy.service
+++ b/src/fleet/kube-proxy.service
@@ -9,6 +9,7 @@ ExecStart=/opt/bin/kube-proxy \
 --etcd_servers=http://172.17.15.101:4001 \
 --logtostderr=true
 
+TimeoutStartSec=900s
 Restart=always
 RestartSec=10
 
