--- a/src/fleet/kube-proxy.service
+++ b/src/fleet/kube-proxy.service
@@ -4,7 +4,7 @@ Documentation=https://github.com/GoogleCloudPlatform/kubernetes
 
 [Service]
 ExecStart=/opt/bin/kube-proxy \
---etcd_servers=http://172.17.15.101:4001 \
+--master=http://172.17.15.101:8080 \
 --logtostderr=true
 
 Restart=always
