--- a/src/fleet/kube-apiserver.service
+++ b/src/fleet/kube-apiserver.service
@@ -9,6 +9,7 @@ ExecStart=/opt/bin/kube-apiserver \
 --portal_net=10.244.0.0/16 \
 --etcd_servers=http://127.0.0.1:4001 \
 --public_address_override=172.17.15.101 \
+--cors_allowed_origins=.* \
 --logtostderr=true
 
 Restart=always
