--- a/src/fleet/kube-proxy.service
+++ b/src/fleet/kube-proxy.service
@@ -3,9 +3,10 @@ Description=Kubernetes Proxy
 Documentation=https://github.com/GoogleCloudPlatform/kubernetes
 
 [Service]
+ExecStartPre=/opt/bin/wupiao 172.17.15.101:8080
 ExecStart=/opt/bin/kube-proxy \
---master=http://172.17.15.101:8080 \
---logtostderr=true
+ --master=http://172.17.15.101:8080 \
+ --logtostderr=true
 
 Restart=always
 RestartSec=10
