--- a/src/fleet/kube-apiserver.service
+++ b/src/fleet/kube-apiserver.service
@@ -4,13 +4,17 @@ Documentation=https://github.com/GoogleCloudPlatform/kubernetes
 
 [Service]
 ExecStart=/opt/bin/kube-apiserver \
---address=0.0.0.0 \
---port=8080 \
---portal_net=10.244.0.0/16 \
---etcd_servers=http://127.0.0.1:4001 \
---public_address_override=172.17.15.101 \
---cors_allowed_origins=.* \
---logtostderr=true
+ --allow_privileged=true \
+ --insecure_bind_address=0.0.0.0 \
+ --insecure_port=8080 \
+ --kubelet_https=true \
+ --secure_port=6443 \
+ --service-cluster-ip-range=10.100.0.0/16 \
+ --etcd_servers=http://127.0.0.1:4001 \
+ --public_address_override=127.0.0.1 \
+ --cors_allowed_origins=.* \
+ --logtostderr=true
+ --runtime_config=api/v1beta3
 
 Restart=always
 RestartSec=10
