--- a/src/fleet/kube-kubelet.service
+++ b/src/fleet/kube-kubelet.service
@@ -4,16 +4,17 @@ Documentation=https://github.com/GoogleCloudPlatform/kubernetes
 
 [Service]
 EnvironmentFile=/etc/environment
+ExecStartPre=/opt/bin/wupiao 172.17.15.101:8080
 ExecStart=/opt/bin/kubelet \
---address=0.0.0.0 \
---port=10250 \
---hostname_override=$public_ipv4 \
---api_servers=http://172.17.15.101:8080 \
---allow_privileged=true \
---logtostderr=true \
---cadvisor_port=4194 \
---healthz_bind_address=0.0.0.0 \
---healthz_port=10248
+ --address=0.0.0.0 \
+ --port=10250 \
+ --hostname_override=$public_ipv4 \
+ --api_servers=http://172.17.15.101:8080 \
+ --allow_privileged=true \
+ --logtostderr=true \
+ --cadvisor_port=4194 \
+ --healthz_bind_address=0.0.0.0 \
+ --healthz_port=10248
 
 Restart=always
 RestartSec=10
