--- a/src/fleet/kube-kubelet.service
+++ b/src/fleet/kube-kubelet.service
@@ -8,7 +8,7 @@ ExecStartPre=/opt/bin/wupiao 172.17.15.101:8080
 ExecStart=/opt/bin/kubelet \
  --address=0.0.0.0 \
  --port=10250 \
- --hostname_override=$public_ipv4 \
+ --hostname_override=${COREOS_PRIVATE_IPV4} \
  --api_servers=http://172.17.15.101:8080 \
  --allow_privileged=true \
  --logtostderr=true \
