--- a/src/fleet/kube-kubelet.service
+++ b/src/fleet/kube-kubelet.service
@@ -10,6 +10,7 @@ ExecStart=/opt/bin/kubelet \
  --port=10250 \
  --hostname_override=${COREOS_PRIVATE_IPV4} \
  --api_servers=http://172.17.15.101:8080 \
+ --register-node=true \
  --allow_privileged=true \
  --logtostderr=true \
  --cadvisor_port=4194 \
