--- a/src/fleet/kube-kubelet.service
+++ b/src/fleet/kube-kubelet.service
@@ -8,6 +8,8 @@ ExecStartPre=/opt/bin/wupiao 172.17.15.101:8080
 ExecStart=/opt/bin/kubelet \
  --address=0.0.0.0 \
  --port=10250 \
+ --cluster_dns=10.100.0.10 \
+ --cluster_domain=cluster.local \
  --hostname_override=${COREOS_PRIVATE_IPV4} \
  --api_servers=http://172.17.15.101:8080 \
  --register-node=true \
