--- a/src/fleet/kube-kubelet.service
+++ b/src/fleet/kube-kubelet.service
@@ -12,6 +12,8 @@ ExecStart=/opt/bin/kubelet \
  --api_servers=http://172.17.15.101:8080 \
  --register-node=true \
  --allow_privileged=true \
+ --cluster_dns=10.100.0.10 \
+ --cluster_domain=cluster.local \
  --logtostderr=true \
  --cadvisor_port=4194 \
  --healthz_bind_address=0.0.0.0 \
