--- a/src/fleet/fleet-ui.service
+++ b/src/fleet/fleet-ui.service
@@ -14,7 +14,7 @@ ExecStart=/usr/bin/docker run --rm --name fleet_ui --memory="128m" \
  -v /home/core/.ssh/id_rsa:/root/id_rsa \
  purpleworks/fleet-ui
 #
-ExecStop=/usr/bin/docker stop fleet_ui
+ExecStop=/usr/bin/docker kill fleet_ui
 ExecStopPost=-/usr/bin/docker rm fleet_ui
 
 TimeoutStartSec=900s
